chore: extend the script to add the missing logic and update readme

--- a/script/upgrades/MU03/MU03.md
+++ b/script/upgrades/MU03/MU03.md
@@ -6,4 +6,6 @@ Summary:
 
 - Upgraded Circuit Breaker which supports dependencies and aggregations
 - Fixes to the ConstantSum market maker logic
+- Refactors BiPoolManager to accommodate updated logic in ConstantSum pricing module
+- Creates new cEUR/USDC, cBRL/USDC
 - Reconfigure Pools with new trading limits
