feat: refactor deployment scripts to match existing structure

--- a/script/upgrades/MU07/MU07.md
+++ b/script/upgrades/MU07/MU07.md
@@ -1,9 +1,12 @@
 ### MU07
 
-Whitelist Relayers and configure SortedOracles for cPHP
+Prepare Chainlink Oracle Setup for PSO launch.
 
-Summary:
+Deployment scripts:
+- Deploy ChainlinkRelayerFactory(Proxy) and ProxyAdmin
+- Create relayers for `relayed:CELOPHP` and `relayed:PHPUSD`
 
+Proposal Summary:
 - Whitelist relayer for `relayed:CELO/PHP`
 - Whitelist relayer for `relayed:PHP/USD`
-- Set equivalent token for `address(cPHP)` as `relayed:CELO/PHP`
+- Set equivalent token for `address(PSO)` as `relayed:CELO/PHP`
