fix: submodule fun time

--- a/script/upgrades/MU07/MU07.md
+++ b/script/upgrades/MU07/MU07.md
@@ -9,6 +9,6 @@ Deployment scripts:
 
 Proposal Summary:
 
-- Whitelist relayer for `relayed:CELO/PHP`
-- Whitelist relayer for `relayed:PHP/USD`
+- Whitelist relayer for `relayed:CELOPHP`
+- Whitelist relayer for `relayed:PHPUSD`
 - Set equivalent token for `address(PSO)` as `relayed:CELO/PHP`
