--- a/script/upgrades/MU08/MU08.md
+++ b/script/upgrades/MU08/MU08.md
@@ -32,3 +32,7 @@ Legacy MentoV1 contracts:
 - ExchangeEUR + ExchangeEURProxy
 - ExchangeBRL + ExchangeBRLProxy
 - GrandaMento + GrandaMentoProxy
+
+Mento Governance contracts:
+
+- GovernanceFactory
