chore: add cCOP proxy transfer to MU08

--- a/script/upgrades/MU08/MU08.md
+++ b/script/upgrades/MU08/MU08.md
@@ -15,7 +15,8 @@ Tokens:
 - cBRLProxy contract
 - eXOFProxy contract
 - cKESProxy contract
-- POSProxy contract
+- PUSOProxy contract
+- cCOPProxy contract
 
 MentoV2 contracts:
 
