docs: remove mention of unneeded checks

--- a/script/upgrades/MU09/MU09.md
+++ b/script/upgrades/MU09/MU09.md
@@ -19,7 +19,5 @@ This change breaks the circular dependency between governance and Locking contra
 - Plan to return ownership to governance after L2 transition is complete
 
 #### Testing
-- Deploy ProxyAdmin with correct ownership
+- Deploy ProxyAdmin with correct ownership(Mento labs multisig)
 - Verify successful transfer of Locking proxy ownership
-- Confirm MentoLabs multisig can execute upgrades
-- Validate governance can still function normally
