--- a/script/upgrades/MU08/MU08.md
+++ b/script/upgrades/MU08/MU08.md
@@ -1,9 +1,12 @@
 ### MU08
 
-Transfer ownership of the MentoProtocol contracts to Mento Governance.
+Transfer ownership of the MentoProtocol contracts to Mento Governance. Return of 80 mio CELO to Celo Governance.
 
 Proposal Summary:
-This proposal transfers ownership of the MentoProtocol contracts to Mento Governance. This will allow Mento token holders to own and manage the protocol. Additionally it adds Reserve Multisig as an "Other Reserve Address" of onchain Reserve contract and removes old other reserve addresses.
+
+- This proposal transfers ownership of the MentoProtocol contracts to Mento Governance. This will allow Mento token holders to own and manage the protocol.
+- Additionally it adds Reserve Multisig as an "Other Reserve Address" of onchain Reserve contract and removes old other reserve addresses.
+- In order to complete the governance transition the 80 mio CELO that was previously transferred to the mento reserve is returned to Celo Governance.
 
 Contracts to Transfer Ownership:
 
@@ -37,3 +40,17 @@ Legacy MentoV1 contracts:
 Mento Governance contracts:
 
 - GovernanceFactory
+
+Steps to return of 80 mio CELO to Celo Governance:
+
+1. set and initialize Celo Custody Reserve
+2. add celo gov to custody reserve as other reserve address
+3. set celo gov as spender on custody reserve
+4. add custody reserve as other reserve address to main reserve
+5. add celo gov as Spender on main reserve
+6. set celo spending ratio to 100% on main reserve
+7. transfer 80 mio CELO to custody reserve
+8. transfer 20 mio CELO from custody reserve to Celo gov
+9. remove celo gov from main reserve spender list
+10. remove custody reserve from main reserve other reserve list
+11. transfer ownership of celo custody reserve to mento Gov
