--- a/script/upgrades/MU08/MU08.md
+++ b/script/upgrades/MU08/MU08.md
@@ -41,7 +41,7 @@ Mento Governance contracts:
 
 - GovernanceFactory
 
-Steps to return of 80 Million CELO to Celo Governance:
+Steps to return of 82,406,987 CELO to Celo Governance:
 
 1. set and initialize Celo Custody Reserve
 2. add celo gov to custody reserve as other reserve address
@@ -49,8 +49,8 @@ Steps to return of 80 Million CELO to Celo Governance:
 4. add custody reserve as other reserve address to main reserve
 5. add celo gov as Spender on main reserve
 6. set celo spending ratio to 100% on main reserve
-7. transfer 80 Million CELO to custody reserve
-8. transfer 20 Million CELO from custody reserve to Celo gov
+7. transfer ~82.4M CELO to custody reserve
+8. transfer 20M CELO from custody reserve to Celo gov
 9. remove celo gov from main reserve spender list
 10. remove custody reserve from main reserve other reserve list
 11. transfer ownership of celo custody reserve to mento Gov
