feat: transferred GBP, ZAR, AUD, CAD ownership to mento gov in MU08

--- a/script/upgrades/MU08/MU08.md
+++ b/script/upgrades/MU08/MU08.md
@@ -21,6 +21,10 @@ Tokens:
 - PUSOProxy contract
 - cCOPProxy contract
 - cGHSProxy contract
+- cGBPProxy contract
+- cAUDProxy contract
+- cCADProxy contract
+- cZARProxy contract
 
 MentoV2 contracts:
 
