feat: transfer ownership for CHF, NGN, and JPY

--- a/script/upgrades/MU08/MU08.md
+++ b/script/upgrades/MU08/MU08.md
@@ -25,6 +25,9 @@ Tokens:
 - cAUDProxy contract
 - cCADProxy contract
 - cZARProxy contract
+- cNGNProxy contract
+- cJPYProxy contract
+- cCHFProxy contract
 
 MentoV2 contracts:
 
