--- a/script/upgrades/MU08/MU08.md
+++ b/script/upgrades/MU08/MU08.md
@@ -34,6 +34,7 @@ MentoV2 contracts:
 - BiPoolManager + BiPoolManagerProxy
 - Broker + BrokerProxy
 - Reserve + ReserveProxy
+- SortedOraclesProxy
 - BreakerBox
 - MedianDeltaBreaker
 - ValueDeltaBreaker
